# django-render

./: build.sh  pyproject.toml  render.yaml
mysite/: pyproject.toml
mysite-project/: build.sh
mysite/mysite/: settings.py  urls.py
mysite/render/: views.py
mysite/render/templates/render/: index.html
