[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Han <haaannn97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
